Prevents inline td from wrapping.

--- a/static/css/game.less
+++ b/static/css/game.less
@@ -26,6 +26,7 @@
 	border-spacing:0px 0px;
   	background:@light;
 	line-height:32px;
+    white-space:nowrap;
 	td {
         display:inline-block;
 		font-size:10px;
